fixed border and shadow in ios, header z-index

--- a/src/components/Body/FormSection/FormSection.module.scss
+++ b/src/components/Body/FormSection/FormSection.module.scss
@@ -29,10 +29,10 @@
     }
 
     @include bg-desktop {
-      background-position: left -115px bottom 20px;
+      background-position: left -115px bottom -45px;
     }
     @include bg-desktop-up {
-      background-position: left 0px bottom 20px;
+      background-position: left 0px bottom -45px;
     }
     .contentWrapp {
       padding: 200px 20px 0 20px;
@@ -51,7 +51,7 @@
         padding: 248px 44px 118px 44px;
       }
       @include for-desktop-up {
-        padding: 220px 0 118px 0;
+        padding: 215px 0 53px 0;
       }
       .content {
         display: -webkit-box;
@@ -96,7 +96,8 @@
             padding-right: 34px;
           }
           @include for-desktop-up {
-            margin-top: 6px;
+            margin-top: 10px;
+            margin-bottom: 148px;
           }
           .formTopFirstTitleWrp {
             margin-bottom: 20px;
@@ -175,6 +176,9 @@
             }
             @include for-desktop {
               left: -20px;
+            }
+            @include for-desktop-up {
+              left: -55px;
             }
             .imgArrow {
               position: absolute;
@@ -291,6 +295,7 @@
   position: relative;
   max-width: 447px;
   height: 496px;
+
   @include for-phone {
     position: relative;
     width: 100%;
@@ -313,7 +318,7 @@
     margin-left: 35px;
   }
   @include for-desktop-up {
-    margin-left: 40px;
+    margin-left: 42px;
   }
   .formBg {
     position: absolute;
@@ -371,6 +376,9 @@
       padding: 32px 32px 0 32px;
     }
     @include for-desktop {
+      padding: 32px 32px 24px 32px;
+    }
+    @include for-desktop-up {
       padding: 32px 32px 24px 32px;
     }
     //* Arrow form*//
@@ -479,7 +487,7 @@
         justify-content: center;
       }
       .contactFormInput:focus {
-        border: 2px solid rgb(77, 171, 248);
+        border: 1px solid rgb(77, 171, 248);
       }
       .contactFormInput {
         width: 100%;
