--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 80px;
-  z-index: 10;
+  z-index: 300;
   @include for-phone {
     position: fixed;
     top: 0px;
