--- a/src/index.scss
+++ b/src/index.scss
@@ -81,3 +81,11 @@ button:focus {
     padding: 0;
   }
 }
+
+input:not([type='checkbox']):not([type='radio']),
+textarea,
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
